; ModuleID = '/home/carl/AnghaBench/git/extr_log-tree.c_parse_decorate_color_config.c'
source_filename = "/home/carl/AnghaBench/git/extr_log-tree.c_parse_decorate_color_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@color_decorate_slots = common dso_local global i32 0, align 4
@decoration_colors = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @parse_decorate_color_config(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i32, i32* @color_decorate_slots, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @LOOKUP_CONFIG(i32 %9, i8* %10)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %29

15:                                               ; preds = %3
  %16 = load i8*, i8** %7, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %21, label %18

18:                                               ; preds = %15
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @config_error_nonbool(i8* %19)
  store i32 %20, i32* %4, align 4
  br label %29

21:                                               ; preds = %15
  %22 = load i8*, i8** %7, align 8
  %23 = load i32*, i32** @decoration_colors, align 8
  %24 = load i32, i32* %8, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @color_parse(i8* %22, i32 %27)
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %21, %18, %14
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @LOOKUP_CONFIG(i32, i8*) #1

declare dso_local i32 @config_error_nonbool(i8*) #1

declare dso_local i32 @color_parse(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
